# chainhook-demo

./: .gitignore  Cargo.toml  predicate.json  setup_wallet.sh  transfer.sh
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.html  index.js  queries.ts  styles.css
src/: main.rs
src/server/: gql.rs  mod.rs  query.rs
