[package]
name = "chainhook-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainhook-sdk = {version = "0.13.0-beta.0", features = ["zeromq"] }
# chainhook-sdk = {path = "../chainhook/components/chainhook-sdk", default_features = false, features = ["zeromq", "debug"] }
hiro-system-kit = "0.3.4"
juniper = "0.16.1"
juniper_codegen = "0.16.0"
juniper_rocket = "0.9.0"
rocket = { version = "0.5.0", features = ["json"] }
rust-embed = "8.3.0"
serde_json = "1.0.116"
tokio = "1.37.0"
